# STM32-CMake-Template

./: .gitmodules  CMakeLists.txt  main.elf
RTOS/: CMakeLists.txt
RTOS/inc/: FreeRTOSConfig.h
Source/: main.c  stm32f4xx_it.c
Source/Include/: config.h  main.h
Source/PeripheralsDriver/Include/: modbus_callback.h  modbus_define.h  motor.h  usart.h
Source/PeripheralsDriver/Source/: modbus_callback.c  modbus_define.c  motor.c  usart.c
Source/STM32StdLib/: CMakeLists.txt
Source/STM32StdLib/Include/CMSIS/Device/: stm32f4xx.h
Source/STM32StdLib/Source/CMSIS/: system_stm32f4xx.c
Source/Task/Include/: USART_ReadTask.h  modbus_define.h
Source/Task/Source/: USART_ReadTask.c
Source/Test/CRC/: test_CRC.c  test_CRC.h
Source/Test/USART/: test_usart.c  test_usart.h
Source/Utils/Include/: CRC.h  circularbuffer.h
Source/Utils/Source/: CRC.c  circularbuffer.c
